; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/pci/cx23885/extr_cx23885-input.c_cx23885_input_ir_open.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/pci/cx23885/extr_cx23885-input.c_cx23885_input_ir_open.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rc_dev = type { %struct.cx23885_kernel_ir* }
%struct.cx23885_kernel_ir = type { i32* }

@ENODEV = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.rc_dev*)* @cx23885_input_ir_open to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cx23885_input_ir_open(%struct.rc_dev* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.rc_dev*, align 8
  %4 = alloca %struct.cx23885_kernel_ir*, align 8
  store %struct.rc_dev* %0, %struct.rc_dev** %3, align 8
  %5 = load %struct.rc_dev*, %struct.rc_dev** %3, align 8
  %6 = getelementptr inbounds %struct.rc_dev, %struct.rc_dev* %5, i32 0, i32 0
  %7 = load %struct.cx23885_kernel_ir*, %struct.cx23885_kernel_ir** %6, align 8
  store %struct.cx23885_kernel_ir* %7, %struct.cx23885_kernel_ir** %4, align 8
  %8 = load %struct.cx23885_kernel_ir*, %struct.cx23885_kernel_ir** %4, align 8
  %9 = getelementptr inbounds %struct.cx23885_kernel_ir, %struct.cx23885_kernel_ir* %8, i32 0, i32 0
  %10 = load i32*, i32** %9, align 8
  %11 = icmp eq i32* %10, null
  br i1 %11, label %12, label %15

12:                                               ; preds = %1
  %13 = load i32, i32* @ENODEV, align 4
  %14 = sub nsw i32 0, %13
  store i32 %14, i32* %2, align 4
  br label %20

15:                                               ; preds = %1
  %16 = load %struct.cx23885_kernel_ir*, %struct.cx23885_kernel_ir** %4, align 8
  %17 = getelementptr inbounds %struct.cx23885_kernel_ir, %struct.cx23885_kernel_ir* %16, i32 0, i32 0
  %18 = load i32*, i32** %17, align 8
  %19 = call i32 @cx23885_input_ir_start(i32* %18)
  store i32 %19, i32* %2, align 4
  br label %20

20:                                               ; preds = %15, %12
  %21 = load i32, i32* %2, align 4
  ret i32 %21
}

declare dso_local i32 @cx23885_input_ir_start(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
